# EECS_381_project02

./: .gitignore  Build.sh  CMakeLists.txt  README.md  Readme.md  build-all.sh  valgrind_flags.txt
includes/: Globals.hpp  Meeting.hpp  OrderedList.hpp  Person.hpp  Room.hpp  UserInputs.h
includes/String/: String.hpp
src/: Globals.cpp  Meeting.cpp  Person.cpp  Room.cpp  UserInputs.cpp  schedular_main.cpp
src/String/: String.cpp
tests/: CMakeLists.txt
tests/src/: MeetingTest.cpp  OrderedListTest.cpp  PersonTest.cpp  StringTest.cpp  main.cpp
